--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "AQHI Block Heater",
+  "name": "AQHI ACA Community",
   "short_name": "AQHI",
   "start_url": "/",
   "display": "standalone",
